@@ -60,7 +60,8 @@ Release 0.19.0 - Unreleased
    HBASE-976   HADOOP 0.19.0 RC0 is broke; replace with HEAD of branch-0.19
    HBASE-977   Arcane HStoreKey comparator bug
    HBASE-979   REST web app is not started automatically
-
+   HBASE-964   Startup stuck "waiting for root region"
+   
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
    HBASE-890   Alter table operation and also related changes in REST interface
